--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -55,9 +55,9 @@
             </tr>
             <tr height="180">
                 <td valign="center">
-                    <input type="range" id="range-1" class="vartical" value="0" min="0" max="10" step="1" oninput="range()"/>
+                    <input type="range" id="range-1" class="vartical" value="0" min="-5" max="5" step="1" oninput="range()"/>
                 </td>
-                <td valign="bottom">
+                <td valign="center">
                     <input type="range" id="range-2" value="0" min="-5" max="5" step="1" oninput="turn()"/>
                 </td>
             </tr>
